WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
95515
REGRESSION (127047): Crash in PluginProxy::windowVisibilityChanged when changing tabs
https://bugs.webkit.org/show_bug.cgi?id=95515
Summary
REGRESSION (127047): Crash in PluginProxy::windowVisibilityChanged when chang...
Jim Oase
Reported
2012-08-30 16:54:35 PDT
Crash generally happens when changing windows or tabs.
Attachments
Crash Report... from crash dialog prior to being sent to Apple
(64.20 KB, text/rtf)
2012-08-31 06:07 PDT
,
Jim Oase
no flags
Details
Patch
(1.60 KB, patch)
2012-08-31 09:13 PDT
,
Brady Eidson
mitz: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2012-08-30 22:35:15 PDT
Thank you for the report. Could you please attach a crash log?
Jim Oase
Comment 2
2012-08-31 06:07:15 PDT
Created
attachment 161685
[details]
Crash Report... from crash dialog prior to being sent to Apple When I checked the root level Crash Log it was empty... so I reloaded the offending build and it crashed immediately. Attached is the crash report from that crash prior to sending it to Apple.
Alexey Proskuryakov
Comment 3
2012-08-31 08:27:30 PDT
<
rdar://problem/12211180
>
Brady Eidson
Comment 4
2012-08-31 08:30:33 PDT
Jim please include more specific steps on how to reproduce this. Specific URLs you have open, for example.
Brady Eidson
Comment 5
2012-08-31 08:45:14 PDT
Nevermind, figured out how to repro. The key is to open a page with plugin's in a background tab, then start switching between tabs. It's a PluginView representing a Plug-in that has never been initialized. Instead of : void PluginView::setWindowIsFocused(bool windowIsFocused) { if (!m_plugin) return; ... We need: void PluginView::setWindowIsFocused(bool windowIsFocused) { if (!m_isInitialized || !m_plugin) return;
Brady Eidson
Comment 6
2012-08-31 09:13:26 PDT
Created
attachment 161720
[details]
Patch No realistic way to test this
Jim Oase
Comment 7
2012-08-31 18:30:19 PDT
I have installed nightly build Version 6.0 (8536.25, 537+) since reporting the problem. The crash problems have not occurred since.
Alexey Proskuryakov
Comment 8
2012-09-11 16:55:34 PDT
Looks like this has been landed in <
http://trac.webkit.org/changeset/127272
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug